fixed overlap issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,9 @@ main- #000000
   top: 0;
   z-index: 10;
 }
+.logo {
+  text-decoration: none;
+}
 
 .top-bar {
   padding: 0 1.2rem;
@@ -50,10 +53,10 @@ main- #000000
 }
 
 /**Hero section***/
-.section-hero {
-  height: 100vh;
 
+.section-hero {
   padding-top: 6.6rem;
+  margin-bottom: 9.6rem;
 }
 .hero {
   margin-top: 4.2rem;
@@ -94,6 +97,7 @@ main- #000000
 }
 .job-description {
   font-size: 1rem;
+  line-height: 1.6;
 }
 .cta:link,
 .cta:visited {
@@ -111,7 +115,7 @@ main- #000000
 
 /**BRANDS section***/
 .section-brands {
-  margin-top: 9.6rem;
+  margin-bottom: 9.6rem;
 }
 .brands {
   padding: 0 1.2rem;
@@ -157,7 +161,7 @@ main- #000000
 
 /**About section***/
 .section-about {
-  margin-top: 8rem;
+  margin-bottom: 9.6rem;
 }
 .about-cnt {
   display: grid;
@@ -193,4 +197,11 @@ main- #000000
 .about-txt {
   font-size: 0.9rem;
   line-height: 1.8;
+}
+
+/**How section***/
+
+.how {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
